# EXO

./: .copilot-instructions.md  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  COPILOT_MASTER_DIRECTIVE.md  DEPLOYMENT_GUIDE.md  EXO_DOCUMENTATION.md  EXO_STT_TTS_REWRITE_PLAN.txt  GUIDE_COMMANDES_VOCALES.md  GUIDE_VOCALES_EXO.md  GestionMicro.md  QUICKSTART.md  README.md  Reduction STT.md  exo_launcher.py  launch_exo.ps1  pyproject.toml  quick_start.sh  requirements.txt  test_whisper_direct.py
app/: main.cpp
app/audio/: AudioDeviceManager.cpp  AudioDeviceManager.h  AudioInputRtAudio.cpp  TTSBackendQt.cpp  TTSBackendQt.h  TTSBackendXTTS.cpp  TTSBackendXTTS.h  ttsmanager.cpp  ttsmanager.h  voicepipeline.cpp  voicepipeline.h
app/core/: HealthCheck.cpp  HealthCheck.h  ServiceManager.cpp  WebSocketClient.cpp  WebSocketClient.h  assistantmanager.cpp  assistantmanager.h  configmanager.cpp  configmanager.h  logmanager.cpp  logmanager.h  pipelineevent.cpp  pipelinetracer.cpp
app/llm/: aimemorymanager.cpp  aimemorymanager.h  claudeapi.cpp  claudeapi.h
app/utils/: weathermanager.cpp  weathermanager.h
config/: assistant.conf.example  assistant.json  eglfs_config.json  environment.example  raspberry-assistant.service  services.json
docs/: ARCHIVES.md  EXO_DOCUMENTATION.md  EXO_SPEC_V4.2.md  README.md  Rapport_Fix_RAM_Doublons.md  VERSIONS.md  last_update.md  limitations.md  modules.md  pipeline.md  rapport_reduction_stt.md  services.md
docs/api/: AIMemoryManager.md  AssistantManager.md  AudioInput.md  ClaudeAPI.md  ConfigManager.md  HealthCheck.md  LogManager.md  PipelineEvent.md  PipelineTracer.md  README.md  ServiceManager.md  TTSManager.md  VoicePipeline.md  WeatherManager.md  WebSocketClient.md  exo_server.md  memory_server.md  nlu_server.md  stt_server.md  tts_server.md  vad_server.md  wakeword_server.md
docs/architecture/: README.md  graph.md  modules.md
docs/archives/: AuditComplet_Prompt.md  CorrectionComplèteMicroservices.md  Fix_RAM_Doublons_Microservices.md  GUI_Release_Prompt.md  GestionMicro_Prompt.md  Reduction_STT_Prompt.md  RolePermanentMaitre_Prompt.md  StabilisationFinale.md  Validation.md  archives_index.md  audit_final_2025_07.md  prompt_design_system.md  prompt_modernisation_ui_old.md
docs/audits/: audit_master_2026_03.md
docs/core/: EXO_DOCUMENTATION.md  EXO_SPEC.md  architecture.md  architecture_graph.md  architecture_modules.md  limitations.md  modules.md  pipeline.md  services.md
docs/guides/: audio_pipeline.md  stt.md  tests.md  tts.md
docs/pipeline/: README.md
docs/prompts/: prompt_audit_complet.md  prompt_correction_microservices.md  prompt_fix_ram_doublons.md  prompt_gestion_micro.md  prompt_gui_release.md  prompt_modernisation_ui.md  prompt_nettoyage.md  prompt_reduction_stt.md  prompt_role_permanent.md  prompt_stabilisation_finale.md  prompt_validation.md
docs/reports/: fix_ram_doublons.md  last_update.md  reduction_stt.md
docs/stt/: README.md
docs/tests/: README.md
docs/tts/: README.md
docs/ui/: design_system.md
docs_site/: README.html  VERSIONS.html  index.html  sitemap.xml  style.css
docs_site/api/: AIMemoryManager.html  AssistantManager.html  AudioInput.html  ClaudeAPI.html  ConfigManager.html  HealthCheck.html  LogManager.html  PipelineEvent.html  PipelineTracer.html  README.html  ServiceManager.html  TTSManager.html  VoicePipeline.html  WeatherManager.html  WebSocketClient.html  exo_server.html  memory_server.html  nlu_server.html  stt_server.html  tts_server.html  vad_server.html  wakeword_server.html
docs_site/archives/: AuditComplet_Prompt.html  CorrectionComplèteMicroservices.html  Fix_RAM_Doublons_Microservices.html  GUI_Release_Prompt.html  GestionMicro_Prompt.html  Reduction_STT_Prompt.html  RolePermanentMaitre_Prompt.html  StabilisationFinale.html  Validation.html  archives_index.html  audit_final_2025_07.html  prompt_design_system.html  prompt_modernisation_ui_old.html
docs_site/audits/: audit_master_2026_03.html
docs_site/core/: EXO_DOCUMENTATION.html  EXO_SPEC.html  architecture.html  architecture_graph.html  architecture_modules.html  limitations.html  modules.html  pipeline.html  services.html
docs_site/guides/: audio_pipeline.html  stt.html  tests.html  tts.html
docs_site/prompts/: prompt_audit_complet.html  prompt_correction_microservices.html  prompt_fix_ram_doublons.html  prompt_gestion_micro.html  prompt_gui_release.html  prompt_modernisation_ui.html  prompt_nettoyage.html  prompt_reduction_stt.html  prompt_role_permanent.html  prompt_stabilisation_finale.html  prompt_validation.html
gui/: index.html  package-lock.json  package.json  tailwind.config.js
gui/src/: App.jsx  (+1 more)
modules_advanced/: assistantmanager.cpp  assistantmanager.h  microsofttts.cpp  microsofttts.h  speechmanager.h  systemmonitor.h
qml/: AdvancedInterface.qml  MainWindow.qml  main.qml  main_complex.qml  main_radial.qml  test_simple.qml
scripts/: _audit_result.json  build_clean.ps1  build_docs_site.py  build_local.py  build_simple.ps1  check_dependencies.ps1  cleanup.ps1  compile.ps1  create_desktop_shortcut.ps1  create_sd_image.sh  cross_compile_rpi.sh  generate_icon.py  install_clean.ps1  install_dependencies.ps1  install_dependencies.py  install_qt_msvc.ps1  install_simple.ps1  md_to_html.py  quick_build.ps1  quick_build.sh  setup_tts_wsl2.sh  start_assistant.sh  test_pytorch_rocm.py  test_simple.ps1  test_stt_latency.py  tts_gpu_server.py  verify_project.ps1
src/: aimemorymanager.cpp  aimemorymanager.h  assistantmanager.cpp  assistantmanager.h  claudeapi.cpp  claudeapi.h  configmanager.cpp  configmanager.h  exo_server.py  logmanager.cpp  logmanager.h  main.cpp  main_simple.cpp  memory_server.py  nlu_server.py  pipelineevent.cpp  pipelineevent.h  pipelinetracer.cpp  pipelinetracer.h  speechmanager.cpp  stt_server.py  systemmonitor.cpp  tts_server.py  ttsmanager.cpp  ttsmanager.h  vad_server.py  voicemanager.cpp  voicemanager.h  voicepipeline.cpp  voicepipeline.h  wakeword_server.py  weathermanager.cpp  weathermanager.h
tests/: test_environment.ps1  test_validation_pipeline.py
tests/cpp/: CMakeLists.txt
(+126 files in other folders)
